# parallel-evm-explorer

./: .envrc.example  .gitignore  .taplo.toml  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  js.yml  rust.yml
frontend/: .env.production  README.md  biome.json  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.js  page.js
frontend/src/components/: Graph.js
frontend/src/static/iconfont/: iconfont.css  iconfont.js  iconfont.json
frontend/src/utils/: api.js
migrations/: 01_create_tables.sql  02_parallel_analyzer_state.sql
src/: config.rs  log.rs  main.rs  parallel_analyzer.rs  server.rs
src/db/: block.rs  database.rs  mod.rs  parallel_analyzer_state.rs  transaction.rs  transaction_dag.rs
src/handlers/: common.rs  transaction_dag.rs
src/models/: common.rs  mod.rs  transaction_dag.rs
