[package]
name = "parallel-evm-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.6", features = [
    "providers",
    "transports",
    "transport-http",
    "rpc",
    "rpc-types",
    "provider-debug-api",
] }
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
eyre = "0.6.12"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
shadow-rs = "1.1.1"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "migrate",
    "derive",
    "postgres",
    "rust_decimal",
    "time",
    "json",
] }
time = { version = "0.3.40", features = ["serde"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = [
    "cors",
    "trace",
    "catch-panic",
    "util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.4", features = ["serde"] }

[package.metadata.cargo-machete]
ignored = ["url", "time"]

[build-dependencies]
shadow-rs = "1.1.1"
